[gd_scene format=3 uid="uid://dwm3x750j20bp"]

[ext_resource type="Script" uid="uid://l6sfd1pfa7ua" path="res://scripts/npc/human.gd" id="1_byrx8"]
[ext_resource type="PackedScene" uid="uid://1y5rwjd1kuwq" path="res://scenes/collectible/geek_bar.tscn" id="2_wbpfs"]
[ext_resource type="PackedScene" uid="uid://bmcaaywwj0wub" path="res://scenes/npc/ragdoll_human.tscn" id="3_cy768"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j03jf"]
height = 3.1936035

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_073c6"]
albedo_color = Color(0.19646159, 0.608459, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_42mg8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j03jf"]
albedo_color = Color(0.72868824, 0.5899588, 0.0173392, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_42mg8"]
albedo_color = Color(0.6451517, 0.043058224, 2.8878452e-07, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_byrx8"]
albedo_color = Color(0.14767182, 0.14767179, 0.14767179, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j03jf"]

[node name="Human" type="CharacterBody3D" unique_id=1742445246]
collision_layer = 2
script = ExtResource("1_byrx8")
geek_bar_scene = ExtResource("2_wbpfs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=68771268]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59680176, 0)
shape = SubResource("CapsuleShape3D_j03jf")

[node name="WanderMesh" type="MeshInstance3D" parent="." unique_id=1358526237]
visible = false
material_override = SubResource("StandardMaterial3D_073c6")
mesh = SubResource("CapsuleMesh_42mg8")

[node name="ConcernMesh" type="MeshInstance3D" parent="." unique_id=1445977737]
visible = false
material_override = SubResource("StandardMaterial3D_j03jf")
mesh = SubResource("CapsuleMesh_42mg8")

[node name="PanicMesh" type="MeshInstance3D" parent="." unique_id=1839179847]
visible = false
material_override = SubResource("StandardMaterial3D_42mg8")
mesh = SubResource("CapsuleMesh_42mg8")

[node name="DeadMesh" type="MeshInstance3D" parent="." unique_id=941349921]
visible = false
material_override = SubResource("StandardMaterial3D_byrx8")
mesh = SubResource("CapsuleMesh_j03jf")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=1844796695]
avoidance_enabled = true
radius = 0.55

[node name="human" parent="." unique_id=1218122690 instance=ExtResource("3_cy768")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, -0.9973562, 0)
